...
    case microphone

    public var id: String { rawValue }

    public var title: String {
        switch self {
        case .mediaServer: "Медиасервер недоступен"
        case .mediaConnection: "Не удалось подключиться к медиасерверу"
        case .microphone: "Нет доступа к микрофону"
        }
    }

    public var description: String {
        switch self {
        case .mediaServer:
...
